--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Tzu-Hao Huang",
   "license": "MIT",
   "devDependencies": {
-    "json-server": "^0.8.7"
+    "json-server": "^0.8.7",
+    "mocha": "^2.3.4",
+    "supertest": "^1.1.0"
   },
   "dependencies": {
     "express": "^4.13.4"
