--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "underscore": "^1.8.3"
   }
 }
