--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "redis": "^2.4.2",
     "underscore": "^1.8.3"
