--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
+    "axon": "^2.0.2",
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "redis": "^2.4.2",
